crates/ruff/src/snapshots/ruff__noqa__tests__noqa_code_trailing_comment.snap
---
source: crates/ruff/src/noqa.rs
expression: "Directive::try_extract(source, TextSize::default())"
---
Some(
    Codes(
        Codes {
            range: 0..12,
            codes: [
                "F401",
            ],
        },
    ),
)
