crates/ruff/src/snapshots/ruff__noqa__tests__noqa_codes.snap
---
source: crates/ruff/src/noqa.rs
expression: "Directive::try_extract(source, TextSize::default())"
---
Ok(
    Some(
        Codes(
            Codes {
                range: 0..18,
                codes: [
                    "F401",
                    "F841",
                ],
            },
        ),
    ),
)
