crates/ruff/src/snapshots/ruff__noqa__tests__noqa_codes_case_insensitive.snap
---
source: crates/ruff/src/noqa.rs
expression: "Directive::try_extract(range, &locator)"
---
Some(
    Codes(
        Codes {
            range: 0..18,
            codes: [
                "F401",
                "F841",
            ],
        },
    ),
)
