crates/ruff/src/snapshots/ruff__noqa__tests__noqa_invalid_suffix.snap
---
source: crates/ruff/src/noqa.rs
expression: "Directive::try_extract(source, TextSize::default())"
---
Err(
    InvalidSuffix,
)
