crates/ruff/src/snapshots/ruff__noqa__tests__noqa_leading_space.snap
---
source: crates/ruff/src/noqa.rs
expression: "Directive::extract(range, &locator)"
---
Codes(
    Codes {
        leading_space_len: 3,
        noqa_range: 4..16,
        trailing_space_len: 0,
        codes: [
            "F401",
        ],
    },
)
